Implement Customer.java for C2